--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>just got peach beachd/title>
+<title>just got peach beachd</title>
 <meta HTTP-EQUIV="REFRESH" content="0; url=https://www.youtube.com/watch?v=soceYqv9Dtw">
 </head>
 <body>
